--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-card-flip": "^1.0.11",
     "react-dom": "^17.0.1",
     "react-flippy": "^0.1.5",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
